# housing-avm

./: README.md  pyproject.toml
.github/workflows/: ci.yml
data/: house_sales_extended.csv  tract_cache.json
notebooks/: example.ipynb  first_eda.ipynb  hello_world.ipynb  house_sales.csv  model_training.ipynb  sdv_synthetic_model.ipynb
scripts/: collect_data.py
src/ElijahA/: pipeline.py  preprocessing.py
tests/: test_preprocessing.py
